--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ option(OPT_BUILD_FREQUENCY_MANAGER "Build the Frequency Manager module" ON)
 option(OPT_BUILD_RECORDER "Audio and baseband recorder" ON)
 option(OPT_BUILD_RIGCTL_CLIENT "Rigctl client to make SDR++ act as a panadapter" OFF)
 option(OPT_BUILD_RIGCTL_SERVER "Rigctl backend for controlling SDR++ with software like gpredict" ON)
+option(OPT_BUILD_RTLTCP_SERVER "RTL-TCP server emulation" ON)
 option(OPT_BUILD_SCANNER "Frequency scanner" ON)
 option(OPT_BUILD_SCHEDULER "Build the scheduler" OFF)
 
@@ -197,6 +198,10 @@ endif (OPT_BUILD_RIGCTL_CLIENT)
 if (OPT_BUILD_RIGCTL_SERVER)
 add_subdirectory("misc_modules/rigctl_server")
 endif (OPT_BUILD_RIGCTL_SERVER)
+
+if (OPT_BUILD_RTLTCP_SERVER)
+add_subdirectory("misc_modules/rtltcp_server")
+endif (OPT_BUILD_RTLTCP_SERVER)
 
 if (OPT_BUILD_SCANNER)
 add_subdirectory("misc_modules/scanner")
